--- a/index.html
+++ b/index.html
@@ -9,17 +9,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="headclass">
             <h1>Welcome to</h1>
             <h1><span class="amiclass1">LABIB</span> Portfolio</h1>
             <h3>Class One Student</h3>
             <p>Islamic International School and College is the product of a serious concern about the country’s educational institutions. We need seriously such institutions that can make efficient citizens of the society, at the same time making them good Muslims.</p>
+            <a class="link-botton" target="_blank" href="https://www.iiscgulshan.com/">Hire Me</a>
         </div>
         <div class="headclass">
             <img src="images/labib1.png" alt="">
         </div>
     </section>
 
+    <section class="missionclass">
+        <div class="headclass">
+            <img src="images/labib2.png" alt="">
+        </div>
+        <div class="headclass">
+            <h1>MISSION</h1>
+            <h3>of Islamic International School & College</h3>
+            <p>The principal objective of our institution is to promote ideal education. However, this is only a part of a wider aim. The institution will be a rising sun so as to show the right path to the persons connected with educational institutions of the country. Through this institution we like to present the nation very good quality citizens. Our ultimate aim is to work to please Allah (SWT) by producing our future generations who will run the country with high standard of quality and morality... </p>
+            <a class="link-botton" target="_blank" href="https://www.iiscgulshan.com/Page.aspx?id=1&ph=Our+Mission">Read More</a>
+        </div>
+    </section>
+    <section class="missionclass mission-vission1">
+        <div id="missionid" class="headclass mission-vission2">
+            <h1>MISSION</h1>
+            <h3 class="amiclass1">of Islamic International School & College</h3>
+            <p>The principal objective of our institution is to promote ideal education. However, this is only a part of a wider aim. The institution will be a rising sun so as to show the right path to the persons connected with educational institutions of the country. Through this institution we like to present the nation very good quality citizens. Our ultimate aim is to work to please Allah (SWT) by producing our future generations who will run the country with high standard of quality and morality... </p>
+        </div>
+        <div id="vissionid" class="headclass mission-vission2">
+            <h1>VISSION</h1>
+            <h3 class="amiclass1">of Islamic International School & College</h3>
+            <p>The principal objective of our institution is to promote ideal education. However, this is only a part of a wider aim. The institution will be a rising sun so as to show the right path to the persons connected with educational institutions of the country. Through this institution we like to present the nation very good quality citizens. Our ultimate aim is to work to please Allah (SWT) by producing our future generations who will run the country with high standard of quality and morality... </p>            
+        </div>
+    </section>
+<footer><p>© All copy right reserved for labib</p></footer>
 </body>
 </html>
